# AI-Product-Photo-Detector

./: .dockerignore  .dvcignore  .env.development  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  Makefile  PRESENTATION.md  PRIVACY.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  dvc.yaml  pyproject.toml  requirements-ui.txt
.dvc/: config
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  deploy.yml  dvc.yml  model-training.yml  pr-preview.yml  request-quota.yml  train.yml
configs/: inference_config.yaml  pipeline_config.yaml  prometheus.yml  train_config.yaml
configs/grafana/dashboards/: ai-detector.json  api-dashboard.json  infrastructure-dashboard.json  (+1 more)
configs/prometheus/: alerting-rules.yml
data/: processed.dvc
docker/: Dockerfile  Dockerfile.training  serve.Dockerfile  train.Dockerfile  ui.Dockerfile
docs/: ARCHITECTURE.md  AUDIT_ARCHITECTURE.md  CICD.md  CONTRIBUTING.md  COSTS.md  DEPLOYMENT.md  INCIDENT_SCENARIO.md  INFRASTRUCTURE.md  MONITORING.md  PRD.md  TRAINING.md  presentation.md  slides-outline.md
helm/ai-detector/: Chart.yaml  values.yaml
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml  storage.yaml
models/checkpoints/: best_model.pt.dvc
notebooks/: train_colab.ipynb
scripts/: create_sample_data.py  download_cifake.py  download_dataset.py  download_utils.py
src/: __init__.py
src/data/: __init__.py  download.py  generate_ai_images.py  prepare.py  validate.py
src/inference/: __init__.py  api.py  auth.py  cache.py  explainability.py  explainer.py  predictor.py  rate_limit.py  schemas.py  shadow.py  state.py  validation.py
src/monitoring/: __init__.py  drift.py  metrics.py
src/pipelines/: evaluate.py  training_pipeline.py
src/training/: __init__.py  augmentation.py  calibration.py  dataset.py  gcs.py  hyperopt.py  model.py  train.py  vertex_submit.py
src/ui/: app.py
src/utils/: __init__.py  config.py  logger.py  model_loader.py
terraform/: .gitignore  README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: conftest.py  test_api.py  test_augmentation.py  test_auth.py  test_batch.py  test_cache.py  test_config.py  test_data_validate.py  test_dataset.py  test_drift.py  test_drift_extended.py  test_evaluate_extended.py  test_explainer.py  test_gcs.py  test_integration.py  test_logger.py  test_metrics.py  test_model.py  test_pipelines.py  test_predictor.py  test_predictor_extended.py  test_routes.py  test_shadow.py  test_state.py  test_train.py  test_training_pipeline_extended.py  test_ui.py  test_validation.py  test_validation_extended.py  test_vertex_submit.py
tests/load/: k6_test.js  locustfile.py
(+37 files in other folders)
